<resources>
    <string name="app_name">demo</string>
    <string name="splash_msg">খাড়ান!! একটু রেডি হইয়া লই</string>
    <string name="help_text1_pList">কোন এলাকায় যাইবেন খালি কন?</string>
    <string name="help_text2_pList">আমি রেডি !!</string>
    <string name="option1_pList">বাউনিয়া বাঁধ</string>
    <string name="option2_pList">প্যারিস রোড</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">secondActivity</string>
    <string name="txt_places">Places</string>
    <string name="txt_cat_title">Category in the Place</string>
    <string name="txt_et_hint_name_prompt_bn">কইবেন? তাইলে টিবি দেন</string>
    <string name="txt_tv_name_prompt">আপনার নামটা কি?</string>
    <string name="txt_cat_prompt">যেই বিষয়ে সাহায্য চান টিপ দেন</string>
    <string name="txt_sub_cat_prompt">আরো বিষয় আছে ... নাড়া দিয়ে দেখেন</string>
    <string name="txt_cd_hook">sub-category hook</string>
    <string name="txt_cd_cat_details_opener">Details view opener</string>
    <string name="txt_category_name">Category Name</string>
    <string name="txt_btn_dir_prompt">Get Direction in My Region</string>
</resources>