<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/violet_kolorob"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="7dp"
            android:text="@string/txt_tv_name_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etNameCat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="7dp"
            android:layout_marginStart="5dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/txt_et_hint_name_prompt_bn"
            android:textIsSelectable="false"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:background="@drawable/backdrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="7dp"
            android:text="@string/txt_cat_prompt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:gravity="start"
            android:padding="7dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/txt_sub_cat_prompt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <HorizontalScrollView
            android:id="@+id/hsvSubCat"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginEnd="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="60dp"
            android:background="@color/purple_kolorob">

        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/hsvCat"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginTop="28dp"
            android:background="@color/black_cat_bg"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <Button
                    android:id="@+id/btnEduCat"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/cat_edu_selector" />

                <Button
                    android:id="@+id/btnFunCat"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/cat_fun_selector" />

                <Button
                    android:id="@+id/btnGovtCat"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/cat_govt_selector" />

                <Button
                    android:id="@+id/btnHealthCat"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/cat_health_selector" />

                <Button
                    android:id="@+id/btnJobCat"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/cat_job_selector" />

                <Button
                    android:id="@+id/btnLawCat"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/cat_law_selector" />

                <Button
                    android:id="@+id/btnMoneyCat"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/cat_money_selector" />
            </LinearLayout>

        </HorizontalScrollView>

        <ImageView
            android:id="@+id/ivHookCat"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:layout_marginTop="110dp"
            android:contentDescription="@string/txt_cd_hook"
            android:src="@drawable/hook" />

    </FrameLayout>

</LinearLayout>